--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.1.5",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@stomp/stompjs": "^7.0.0",
+    "@stripe/stripe-js": "^5.7.0",
     "apexcharts": "^4.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
