--- a/package.json
+++ b/package.json
@@ -16,20 +16,24 @@
     "@angular/compiler": "^19.1.5",
     "@angular/core": "^19.1.5",
     "@angular/forms": "^19.1.5",
-    "@angular/google-maps": "^19.2.1",
+    "@angular/google-maps": "^19.2.8",
     "@angular/material": "^19.1.3",
     "@angular/platform-browser": "^19.1.5",
     "@angular/platform-browser-dynamic": "^19.1.5",
     "@angular/router": "^19.1.5",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
-    "@stomp/stompjs": "^7.0.0",
+    "@stomp/ng2-stompjs": "^8.0.0",
+    "@stomp/stompjs": "^7.1.0",
     "@stripe/stripe-js": "^5.7.0",
     "apexcharts": "^4.4.0",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "express": "^4.21.2",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.9.4",
     "ng-apexcharts": "^1.15.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
