--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^19.1.5",
     "@angular/router": "^19.1.5",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
-    "@stomp/stompjs": "^7.0.0",
+    "@stomp/stompjs": "^7.1.1",
     "@stripe/stripe-js": "^5.7.0",
     "apexcharts": "^4.4.0",
     "bootstrap": "^5.3.3",
@@ -41,6 +41,7 @@
     "@angular/compiler-cli": "^19.1.5",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.16",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
