--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@stomp/ng2-stompjs": "^8.0.0",
     "@stomp/stompjs": "^7.1.0",
     "@stripe/stripe-js": "^5.7.0",
+    "angular-calendar-scheduler": "^18.0.2",
     "apexcharts": "^4.4.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
     "express": "^4.21.2",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.9.4",
