--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@angular/platform-browser-dynamic": "^19.1.5",
     "@angular/router": "^19.1.5",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
-    "@stomp/stompjs": "^7.0.0",
+    "@stomp/stompjs": "^7.1.0",
     "@stripe/stripe-js": "^5.7.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
+    "angular-calendar": "^0.31.1",
     "apexcharts": "^4.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.9.4",
     "ng-apexcharts": "^1.15.0",
@@ -40,13 +43,16 @@
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.5",
     "@types/jasmine": "~4.3.0",
-    "@types/leaflet": "^1.9.16",
+    "@types/leaflet": "^1.9.17",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "mapbox-gl": "^2.6.1",
     "typescript": "~5.7.3"
   }
 }
