--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/cdk": "^19.1.3",
     "@angular/common": "^19.1.5",
     "@angular/compiler": "^19.1.5",
-    "@angular/core": "^19.1.5",
+    "@angular/core": "^19.2.8",
     "@angular/forms": "^19.1.5",
     "@angular/google-maps": "^19.2.8",
     "@angular/material": "^19.1.3",
@@ -24,8 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@stomp/ng2-stompjs": "^8.0.0",
     "@stomp/stompjs": "^7.1.0",
-    "@stripe/stripe-js": "^5.7.0",
-    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
+    "@stripe/stripe-js": "^5.10.0",
     "angular-calendar": "^0.31.1",
     "angular-calendar-scheduler": "^18.0.2",
     "apexcharts": "^4.4.0",
@@ -40,15 +39,17 @@
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.6",
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.5",
+    "@types/angular": "^1.8.9",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.17",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
     "@types/mapbox-gl": "^3.4.1",
     "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~4.6.0",
