--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.9.4",
     "ng-apexcharts": "^1.15.0",
+    "ng2-charts": "^8.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
