--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^19.1.5",
     "@angular/router": "^19.1.5",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@popperjs/core": "^2.11.8",
     "@stomp/ng2-stompjs": "^8.0.0",
     "@stomp/stompjs": "^7.1.0",
     "@stripe/stripe-js": "^5.10.0",
